--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.471.1",
+    "moment": "^2.30.1",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.3",
     "tailwind-merge": "^2.6.0",
